--- a/src/css/homepageD.css
+++ b/src/css/homepageD.css
@@ -1,11 +1,62 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins',sans-serif;
+}
 body{
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
-	margin-top: 50%;
 	background: black;
 }
-body .box{
+body .container{
 	margin: auto;
+}
+.search-bar .container{
+	width: 100%;
+	min-height: 100vh;
+	padding: 5%;
+	background-size: cover;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.searchbar{
+	width: 100%;
+	max-width: 700px;
+	background: rgba(255, 255, 255, 0.2);
+	display: flex;
+	align-items: center;
+	border-radius: 60px;
+	padding: 10px 20px;
+	backdrop-filter: blur(4px) saturate(180%);
+}
+.searchbar input{
+	background: transparent;
+	flex: 1;
+	border: 0;
+	outline: none;
+	padding: 24	px 20px;
+	font-size: 20px;
+	/* color: $cac7ff; */
+}
+.card-body{
+	/* word-wrap: break-word; */
+	overflow-wrap: break-word;
+}
+::placeholder{
+	color: #cac7ff;
+}
+.searchbar button{
+	width: 25px;
+}
+.searchbar button{
+	border: 0;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
+	background: #58629b;
+	cursor: pointer;
 }
 .wrapper{
 	height: 100%;
@@ -101,7 +152,7 @@ footer *{
 	padding: 0;
 	box-sizing: border-box;
 }
-footer .box{
+footer .container{
 	max-width: 1170px;
 	margin: auto;
 }
