--- a/src/css/style1.css
+++ b/src/css/style1.css
@@ -85,12 +85,13 @@ body{
 }
 .main-form{
 	/* background-color: red; */
-	background: rgba(255, 255, 255, 0.1);
+	background: rgba(255, 255, 255, 0.418);
 	backdrop-filter: blur(15px);
 	min-width: 200px;
 	width: 90%;
 	margin: auto;
-	height: 100%;
+	height: 100vh;
+	/* position: absolute; */
 	/* position: relative; */
 }
 #editProductForm{
@@ -101,7 +102,19 @@ body{
 	backdrop-filter: blur(10px) ;
 	background-color: black;
 }
-
+.popupForm{
+	background-color: rgba(255, 255, 255, 0.403);
+	backdrop-filter: blur(15px);
+	color:black;
+}
+.popupForm input[type="text"], .popupForm input[type="checkbox"], .popupForm  textarea, .popupForm  select {
+	background-color: rgba(0, 0, 0, 0.311);
+}
+.popupForm input[type="text"]:focus, .popupForm input[type="checkbox"]:focus, .popupForm  textarea:focus, .popupForm  select:focus {
+	background-color: rgba(255, 255, 255, 0.311);
+	color: black;
+	/* background-color: red; */
+}
 /* #editProductFrom *{
 	width: 100%;
 	background: transparent;
