--- a/src/css/style1.css
+++ b/src/css/style1.css
@@ -6,9 +6,9 @@
 	font-family: "Poppins", sans-serif;
 }
 body{
-	min-height: 100vh;
-	/* background: black; */
-	background-size: cover;
+	min-height: 100vh; 
+	 background: black;
+	 background-size: cover;
 	background-position: center;
 }
 .side-bar{
@@ -132,3 +132,163 @@ body{
 		width: 100%;
 	}
   } */
+  /* ///////////////////////////////////////////////////////////////////// */
+
+
+.proContainer{
+	background: black;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.product1{
+	max-width: 900px;
+	background-color: #ffffff35;
+	backdrop-filter: blur(5px);
+	padding: 32px;
+	display: grid;
+	grid-template-columns: 360px 1fr;
+	border-radius: 16px;
+	grid-gap: 24px;
+}
+.small-pic{
+	margin: 20px;
+	margin-left: -5px;
+	display: flex;
+	flex-direction: row;
+	overflow: scroll;
+
+}
+.small-img{
+	height: 135px;
+	width: 200px;
+	border: 1px solid white;
+	border-radius: 12px;
+	cursor: pointer;
+	margin-right: 1em;
+}
+.product .info{
+	padding-block: 32px;
+}
+.closeBtn{
+	text-decoration: none;
+	border: 1px solid blue;
+	background: blue;
+	padding: 10px;
+	border-radius: 12px;
+	margin-left: 200px;
+}
+.name,.price,.qty{
+	font-size: 32px;
+	margin-bottom: 20px;
+}
+.info label{
+	font-size: 1rem;
+	display: block;
+	padding-bottom: 16px;
+}
+.info .grid{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+.info .colors{
+	padding-block: 32px;
+}
+.colors span{
+	width: 48px;
+	height: 48px;
+	display: inline-block;
+	margin-right: -16px;
+	border-radius: 50%;
+	background-color: var(--color);
+	border: 1px solid white;
+	cursor: pointer;
+}
+.button{
+	border: none;
+	height: auto;
+	weight: auto;
+	padding: 10px 20px;
+	font-size: 12px;	
+	font-size: 0.8rem;
+	border-radius: 24px;
+	letter-spacing: 2px;
+}
+.button + .button{
+	margin-left: 7px;
+}
+.outline{
+	background: transparent;
+	color: rgba(0, 212, 255, 0.9);
+	border: 1px solid rgba(0, 212, 255, 0.6);
+	transition: all 0.3s ease;
+}
+.outline:hover{
+	transform: scale(1.125);
+	color: rgba(255, 255, 255, 0.9);
+	border-color: rgba(255, 255, 255, 0.9);
+	transition: all 0.3s ease;
+}
+.fill{
+	background: rgba(0, 212, 255, 0.9);
+	color: rgba(255, 255, 255, 0.95);
+	filter: drop-shadow(0);
+	font-weight: bold;
+	transition: all 0.3s ease;
+}
+.fill:hover{
+	transform: scale(1.125);
+	border-color: rgba(255, 255, 255, 0.9);
+	filter: drop-shadow(0 10px 5px rgba(0, 0, 0, 0.125));
+	transition: all 0.3s ease;
+}
+.product1{
+	display: flex;
+	
+}
+.pic{
+	overflow: hidden;
+}
+.flex-cons{
+	width: 50%;
+}
+.action{
+	position: absolute;
+	bottom: 2em;
+}
+
+  .colors{
+	max-height: 166px;
+	overflow: scroll;
+	margin-bottom:3em;
+  }
+@media only screen and (max-width: 925px) {
+	.product1{
+		flex-direction: column;
+	}
+	.flex-cons{
+		width: 100%;
+		margin-top:2em;
+	}
+	.detailsMainForm{
+		width: 70%;
+		margin-top:100px;
+		z-index: 10000;
+		min-width: 375px;
+	}
+	.btn{
+		position: absolute;
+		right: 1em;
+		top:2em;
+	}
+	.biggerImg{
+		margin-top: 4em;
+	}
+	.big-img{
+		display: flex;
+		justify-content: center;
+	}
+  }
