--- a/src/css/style1.css
+++ b/src/css/style1.css
@@ -91,8 +91,10 @@ body{
 	width: 90%;
 	margin: auto;
 	height: 100vh;
-	/* position: absolute; */
-	/* position: relative; */
+	
+}
+.img-text{
+	color:black;
 }
 #editProductForm{
 	/* padding: 2em; */
